--- a/insanities/locale/ru/LC_MESSAGES/insanities-core.po
+++ b/insanities/locale/ru/LC_MESSAGES/insanities-core.po
@@ -8,13 +8,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-04-14 12:53+0400\n"
+"POT-Creation-Date: 2010-04-19 19:57+0400\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=3; plural=n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
 
 #: /home/harut/python/apps/insanities-testing/insanities/ext/jinja2/templates/widgets/fileinput.html:4
 msgid "текущий файл"
