--- a/tests/ext/i18n/locale/ru/LC_MESSAGES/insanities-core.po
+++ b/tests/ext/i18n/locale/ru/LC_MESSAGES/insanities-core.po
@@ -35,25 +35,25 @@ msgstr "удалить"
 #, python-format
 msgid "The length should be exactly one symbol"
 msgid_plural "The length should be exactly %(max_length)s symbols"
-msgstr[0] "Длина должна быть ровно %(max_length)s символ"
-msgstr[1] "Длина должна быть ровно %(max_length)s символа"
-msgstr[2] "Длина должна быть ровно %(max_length)s символов"
+msgstr[0] "Длина должна быть ровно %s символ"
+msgstr[1] "Длина должна быть ровно %s символа"
+msgstr[2] "Длина должна быть ровно %s символов"
 
 #: /home/harut/python/apps/insanities-testing/insanities/forms/convs.py:186
 #, python-format
 msgid "The length should be at most one symbol"
 msgid_plural "The length should be at most %(max_length)s symbols"
-msgstr[0] "Длина должна быть не более %(max_length)s символа"
-msgstr[1] "Длина должна быть не более %(max_length)s символов"
-msgstr[2] "Длина должна быть не более %(max_length)s символов"
+msgstr[0] "Длина должна быть не более %s символа"
+msgstr[1] "Длина должна быть не более %s символов"
+msgstr[2] "Длина должна быть не более %s символов"
 
 #: /home/harut/python/apps/insanities-testing/insanities/forms/convs.py:188
 #, python-format
 msgid "The length should be at least one symbol"
 msgid_plural "The length should be at least %(min_length)s symbols"
-msgstr[0] "Длина должна быть не менее %(min_length)s символа"
-msgstr[1] "Длина должна быть не менее %(min_length)s символов"
-msgstr[2] "Длина должна быть не менее %(min_length)s символов"
+msgstr[0] "Длина должна быть не менее %s символа"
+msgstr[1] "Длина должна быть не менее %s символов"
+msgstr[2] "Длина должна быть не менее %s символов"
 
 #: /home/harut/python/apps/insanities-testing/insanities/forms/convs.py:191
 msgid "field can not be empty"
