changed my email

--- a/AUTHORS
+++ b/AUTHORS
@@ -2,4 +2,4 @@ Tim Perevezentsev <riffm2005@gmail.com>
 Denis Otkidach <denis.otkidach@gmail.com>
 Viktor Kotseruba <barbuzaster@gmail.com>
 Kirill Grishin <shiberz@gmail.com>
-Harut Dagesian <harut@armenia.ru>
+Harut Dagesian <yes@harutune.name>
